[modify] 暗黙ルールの利用, 特殊ターゲットの利用

--- a/make-flex/Makefile
+++ b/make-flex/Makefile
@@ -1,8 +1,3 @@
 count_words: count_words.o lexer.o -ll
 	gcc -v count_words.o lexer.o -ll -o count_words
-count_words.o: count_words.c
-	gcc -c count_words.c
-lexer.o: lexer.c
-	gcc -c lexer.c
-lexer.c: lexer.l
-	flex -t lexer.l > lexer.c
+.INTERMEDIATE: count_words.o lexer.o
