Change Makefile, Dockerfile

--- a/examples/go-yacc/Dockerfile
+++ b/examples/go-yacc/Dockerfile
@@ -1,7 +1,16 @@
-FROM alpine:3.11
+FROM golang:1.14.1-buster AS build
+
+COPY . /work
+WORKDIR /work
+
+ARG COMMIT
+ENV COMMIT=$COMMIT
+RUN make fast
+
+
+FROM alpine:3.11 AS release
 
 RUN apk add --no-cache --update ca-certificates
-
-COPY dist/linux-amd64/go-yacc /go-yacc
+COPY --from=build /work/bin/go-yacc /go-yacc
 
 ENTRYPOINT ["/go-yacc"]
