--- a/examples/go-yacc/Makefile
+++ b/examples/go-yacc/Makefile
@@ -1,6 +1,8 @@
 NAME := go-yacc
 VERSION := v0.0.1
+ifeq ($(COMMIT),)
 COMMIT := $(shell git rev-parse HEAD)
+endif
 DATE := $(shell date "+%Y-%m-%dT%H:%M:%S%z")
 
 SRCS     := $(shell find . -type f -name '*.go')
@@ -49,13 +51,8 @@ DOCKER_IMAGE_TAG  ?= latest
 DOCKER_IMAGE      := $(DOCKER_IMAGE_NAME):$(DOCKER_IMAGE_TAG)
 
 .PHONY: docker-build
-docker-build: dist/linux-amd64/$(NAME)
-ifeq ($(findstring ELF 64-bit LSB,$(shell file dist/linux-amd64/$(NAME) 2> /dev/null)),)
-	@echo $(findstring ELF 64-bit LSB,$(shell file dist/linux-amd64/$(NAME) 2> /dev/null))
-	@echo "dist/linux-amd64/$(NAME) is not a Linux 64bit binary."
-	@exit 1
-endif
-	docker build -t $(DOCKER_IMAGE) .
+docker-build:
+	docker build --build-arg COMMIT=$(COMMIT) -t $(DOCKER_IMAGE) .
 
 .PHONY: install
 install:
