--- a/examples/go-yacc/Makefile
+++ b/examples/go-yacc/Makefile
@@ -27,8 +27,11 @@ clean:
 	rm -rf vendor/*
 
 .PHONY: fast
-fast:
+fast: parser.go
 	go build $(LDFLAGS) -o bin/$(NAME)
+
+parser.go: parser.go.y
+	goyacc -o parser.go parser.go.y
 
 .PHONY: cross-build
 cross-build:
