Add code to get more suggestive

--- a/examples/go-antlrv4-in-main/Makefile
+++ b/examples/go-antlrv4-in-main/Makefile
@@ -8,4 +8,5 @@ example: calc_parser.go main.go
 	go build
 
 calc_%.go: Calc.g4
-	antlr  -Dlanguage=Go -package main $<
+	# antlr  -Dlanguage=Go -package main $<
+	antlr -listener -visitor -Dlanguage=Go -package main $<
