--- a/study-ds/requirements.small.txt
+++ b/study-ds/requirements.small.txt
@@ -4,6 +4,8 @@ fastapi==0.55.1
 h11==0.9.0
 httptools==0.1.1
 joblib==0.15.1
+mypy==0.780
+mypy-extensions==0.4.3
 networkx==2.4
 numpy==1.18.4
 pandas==1.0.4
@@ -17,6 +19,8 @@ scipy==1.4.1
 six==1.15.0
 starlette==0.13.2
 threadpoolctl==2.1.0
+typed-ast==1.4.1
+typing-extensions==3.7.4.2
 uvicorn==0.11.5
 uvloop==0.14.0
 websockets==8.1
