--- a/examples/py-fastapi/Dockerfile
+++ b/examples/py-fastapi/Dockerfile
@@ -1,9 +1,17 @@
-FROM python:3.7
+FROM python:3.8 AS build-env
 
-RUN pip install fastapi uvicorn
+COPY . /app
+WORKDIR /app
 
-EXPOSE 80
+RUN pip install --upgrade pip && pip install pipenv
+RUN pipenv lock -r | pip install -r /dev/stdin
 
-COPY ./app /app
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
+FROM python:3.8
+
+COPY --from=build-env /usr/local/lib/python3.8/site-packages /usr/local/lib/python3.8/site-packages
+COPY --from=build-env /app/cryptarithm /app/cryptarithm
+COPY setup.py /app/
+
+WORKDIR /app
+ENTRYPOINT ["python", "cryptarithm/main.py"]
