--- a/examples/py-fastapi/Pipfile
+++ b/examples/py-fastapi/Pipfile
@@ -25,6 +25,6 @@ fire = "*"
 python_version = "3.8"
 
 [scripts]
-typecheck = "mypy -p cryptarithm"
+cmd = "python ./cryptarithm/main.py"
 test = "python -m pytest"
-cli = "python ./cryptarithm/main.py"
+typecheck = "mypy -p cryptarithm"
