--- a/training-k8s/Vagrantfile
+++ b/training-k8s/Vagrantfile
@@ -5,6 +5,9 @@ Vagrant.configure("2") do |config|
     host.vm.box = "ubuntu/bionic64"
     host.vm.hostname = "master"
 
+    host.vm.provider "virtualbox" do |v|
+      v.memory = 3072
+    end
     host.vm.network "public_network"
     host.vm.network "private_network", ip: "10.0.1.2",
         virtualbox__intnet: "kub-test"
